--- a/account/templates/account/myorders.html
+++ b/account/templates/account/myorders.html
@@ -104,7 +104,7 @@ a {
 
     {% else %}
 
-        <h3>You have no orders yet.</h3>
+        <h3 class="text-center">You have no orders yet.</h3>
     
     {% endif %}
 </div>
