--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -53,7 +53,7 @@
                     <button class="btn btn-outline-success" id="search" type="submit"><i class="bi bi-search"></i></button>
                 </form>
             </ul>
-            <div class="navbar-nav">
+            <div class="text-center">
 
                 {% if request.user.is_authenticated %}
                 <div class="dropdown d-inline">
