--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -10,7 +10,7 @@
 {% endif %}
 
 <div class="container">
-    <form class="mx-auto my-5 w-25" method="post">
+    <form class="mx-auto my-5" method="post" style="max-width: 700px;">
         {% csrf_token %}
 
         {% if form.errors %}
@@ -19,15 +19,17 @@
         {% endif %}
         <h1 class="text-center my-5">Welcome back</h1>
         
-        <div class="mb-3">
+        <div class="col-8 mx-auto mb-3">
             <label for="email" class="form-label">Username</label>
             <input type="text" name="username" class="form-control" id="email" aria-describedby="emailHelp" required>
         </div>
-        <div class="mb-3">
+        <div class="col-8 mx-auto mb-3">
             <label for="password" class="form-label">Password</label>
             <input type="password" name="password" class="form-control" id="password" required>
         </div>
-        <button type="submit" class="btn btn-primary container-fluid">LOGIN</button>
+        <div class="col-8 mx-auto mb-3">
+            <button type="submit" class="btn btn-primary col-12">LOGIN</button>
+        </div>
     </form>
 </div>
 
