--- a/home/static/home/css/style.css
+++ b/home/static/home/css/style.css
@@ -25,10 +25,7 @@
     }
 }
 
-@media all and (min-width: 990px) {
-    /* Only for desktop version */
-    .dropdown:hover .dropdown-menu {
-        display: block;
-        margin-top: 0; /* remove the gap so it doesn't close */
-    }
+
+.profile-menu {
+    margin-top: 11px !important;
 }
