--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -57,10 +57,10 @@
 
                 {% if request.user.is_authenticated %}
                 <div class="dropdown d-inline">
-                    <span class="btn btn-secondary dropdown-toggle" type="button">
+                    <a class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuProfile" data-bs-toggle="dropdown" aria-expanded="false">
                         <span class="mx-1">Hi, <b>{{ request.user|upper }}</b></span>
-                    </span>
-                    <ul class="dropdown-menu">
+                    </a>
+                    <ul class="profile-menu dropdown-menu" aria-labelledby="dropdownMenuProfile">
                         <li><a class="dropdown-item" href="#">Your Account</a></li>
                         <li><a class="dropdown-item" href="{% url 'account:myorders' %}">Your Orders</a></li>
                         <li><a class="dropdown-item" href="#">Your Reviews</a></li>
