fix broken link

--- a/shop/templates/shop/paymentsuccess.html
+++ b/shop/templates/shop/paymentsuccess.html
@@ -70,7 +70,7 @@ a {
                 <tr>
                     <td>EMAIL/PHONE</td>
                     <td>
-                        <a href="mailto{{ order.email }}:" class="mx-2 text-decoration-underline">{{ order.email }}<a/>
+                        <a href="mailto:{{ order.email }}:" class="mx-2 text-decoration-underline">{{ order.email }}<a/>
                         <a href="tel:{{ order.phone_no }}" class="mx-2 text-decoration-underline">{{ order.phone_no }}</a>
                     </td>
                 </tr>
