--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -296,7 +296,7 @@ $('#add-to-cart').on('click', function (e) {
 
 
     $('#liveAlertPlaceholder').html(`<div class="alert alert-success alert-dismissible" role="alert">
-                                        <strong>Cart Updated!</strong> ${quantityValue} of this product is in the cart
+                                        Cart Updated! <strong>${quantityValue} of this product</strong> is present in the cart
                                         <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
                                     </div>`);
 });
