--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -5,7 +5,6 @@
 {% block title %}{{ product.name }} | Evolves{% endblock title %}
 
 {% block css %}
-
 .carousel-control-prev-icon, .carousel-control-next-icon {
     background-color: rgb(0, 0, 0);
 }
@@ -55,11 +54,6 @@
     max-width: 200px;
 }
 
-.price {
-    color: rgb(201, 0, 0);
-    font-size: 1.5em;
-    font-weight: bold;
-}
 .available, .unavailable {
     font-size: 1.2em;
 }
@@ -181,13 +175,7 @@
                 <div class="price-section">
                 {% if product.stocks != 0 %}
 
-                    {% if product.discount %}
-                        <span class="price">&#x20B9;{% product_price product=product %} </span>
-                        <strike>&#x20B9;{{ product.price|intcomma }} </strike>
-                        <span class="off"> &lpar;{{ product.discount }}&percnt; OFF&rpar;</span>
-                    {% else %}
-                        <span class="price">&#x20B9;{{ product.price|intcomma }}</span>
-                    {% endif %}
+                    {% include 'home/components/discount_price.html' with product=product %}
                     <p class="available">In Stock</p>
                     
                 {% else %}
@@ -195,6 +183,7 @@
                 {% endif %}
                 </div>
 
+                {% if product.stocks != 0 %}
                 <form method="post" class="cart-section">
                     {% csrf_token %}
                     <div class="card">
@@ -217,6 +206,7 @@
                         </div>
                     </div>
                 </form>
+                {% endif %}
             </div>
             <div id="liveAlertPlaceholder"></div>
 
