--- a/shop/templates/shop/product_detail.html
+++ b/shop/templates/shop/product_detail.html
@@ -158,7 +158,7 @@
                     {% for star in unfilled_stars %}
                         <i class="bi bi-star"></i>
                     {% endfor %}
-                    {{ avg_stars }} out of 5
+                    {{ avg_stars|floatformat }} out of 5
                 </p>
                 
                 <p>
