--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -48,8 +48,8 @@
                     {% endfor %}
                     </ul>
                 </li>
-                <form class="d-flex col-12" id="search-form">
-                    <input class="form-control me-2" id="search-field" type="search" placeholder="Search for somethin' ur type..." aria-label="Search">
+                <form method="get" class="d-flex col-12" id="search-form">
+                    <input class="form-control me-2" id="search-field" type="search" placeholder="Search for somethin' ur type..." aria-label="Search" autocomplete="off">
                     <button class="btn btn-outline-success" id="search" type="submit"><i class="bi bi-search"></i></button>
                 </form>
             </ul>
